[package]
name = "rcore-thread"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
description = "Bare-metal multithreading on multi-core processor."
edition = "2018"

[features]
# ignore interrupt instructions
userland = []

[dependencies]
log = "0.4"
spin = "0.5"
deque = { git = "https://github.com/rcore-os/deque.git", branch = "no_std" }